--- a/CIBELServiceSpring/pom.xml
+++ b/CIBELServiceSpring/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.8</version>
+		</dependency>
 
 	</dependencies>
 
